--- a/Prototipos/Prototipo3/Splitter_pydub.ipynb
+++ b/Prototipos/Prototipo3/Splitter_pydub.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sacado de _Ágilmente_ de Bachrach ed sudamericana.\n",
+    "Sacado de _Ágilmente_ de Bachrach.\n",
     "\n",
     "\"Cuando nuestro cerebro se terminó de formar hace unos cien mil años, viviamos en un mundo muy hostil. Salíamos a cazar para poder subsistir. Debido a las condiciones ambientales y a los depredadores que deambulaban, estábamos en un estado de alerta bastante permanente: el acecho de una presa, pero también teniendo mucho cuidado de que no apareciera un depredador. En ese momento, los más temibles eran los leopardos.\""
    ]
@@ -20,22 +20,183 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fracción del texto\n",
-    "Esta es una prueba con el fragmento: \"Cuando nuestro cerebro se terminó de formar hace unos cien mil años\" que en el caso del archivo \n",
-    "1) _CuandoNuestroCerebro_amano_algoritmo.wav_ --> el recorte es el siguiente: \"Cuandonue\"  \"strocerebro se\" \"terminó de\" \"formar\" \"hace unos\" \"cien mil años \" (6 _chunks_)\n",
-    "2) _CuandoNuestroCerebro_amano_oido.wav_ --> el recorte es el siguiente: \"Cuando nuestro\"  \"cerebro se\" \"terminó de\" \"formar\" \"hace unos\" \"cien mil\"  \"años \" (7 _chunks_)"
+    "# Pruebas"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_CuandoNuestroCerebro_amano_oido.wav_ --> el recorte es el siguiente: \"Cuando nuestro\"  \"cerebro se\" \"terminó de\" \"formar\" \"hace unos\" \"cien mil\"  \"años \" (7 _chunks_)"
+    "## Prueba 3 - Word-splitter manual"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se agrego a cada chunk un silencio de 1 seg, y dado que la $fs = 22050 \\ \\frac{m}{seg}$. Por este motivo min_silence_len = 1000 (en $ms$)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Asus\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\pydub\\utils.py:170: RuntimeWarning: Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\n",
+      "  warn(\"Couldn't find ffmpeg or avconv - defaulting to ffmpeg, but may not work\", RuntimeWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydub import AudioSegment\n",
+    "from pydub.silence import split_on_silence\n",
+    "\n",
+    "def WordSplitter(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresh):\n",
+    "    sound_file = AudioSegment.from_wav(raw_audio_path)\n",
+    "    audio_chunks = split_on_silence(\n",
+    "        sound_file,\n",
+    "        min_silence_len,\n",
+    "        silence_thresh = sound_file.dBFS-silence_thresh\n",
+    "        )\n",
+    "    for i, chunk in enumerate(audio_chunks):\n",
+    "        out_file = f\"{chunk_storage_directory}/chunk{i}_de_{chunk_name}.wav\"\n",
+    "        print(f'Audio{i}', out_file)\n",
+    "        chunk.export(out_file, format=\"wav\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transcript E:\n",
+    "\n",
+    "'Cuando nue'\n",
+    "\n",
+    "'stro cerebro se'\n",
+    "\n",
+    "'termino de formar '\n",
+    "\n",
+    "'hace unos cien mil años'\n",
+    "\n",
+    "'viviamos en un mundo muy hos'\n",
+    "\n",
+    "'til'\n",
+    "\n",
+    "'saliamos a'\n",
+    "\n",
+    "'casar '\n",
+    "\n",
+    "'para '\n",
+    "\n",
+    "'poder subsis'\n",
+    "\n",
+    "'tir'\n",
+    "\n",
+    "'debido a las condiciones ambientales '\n",
+    "\n",
+    "'y a los depredadores que deambulaban'\n",
+    "\n",
+    "'est'\n",
+    "\n",
+    "'abamos'\n",
+    "\n",
+    "'en un es'\n",
+    "\n",
+    "'tado de aler'\n",
+    "\n",
+    "'ta bas'\n",
+    "\n",
+    "'tante permanente'\n",
+    "\n",
+    "'el acecho de una'\n",
+    "\n",
+    "'presa'\n",
+    "\n",
+    "'pero tambien tiendo mucho'\n",
+    "\n",
+    "'cuidado que no apareciera un depredador'\n",
+    "\n",
+    "'en ese momento'\n",
+    "\n",
+    "'los mas'\n",
+    "\n",
+    "'temibles'\n",
+    "\n",
+    "'eran los leopardos'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunk_name = 'E'\n",
+    "raw_audio_path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/Zero_padding/E_zero_padding.wav'\n",
+    "chunk_storage_directory = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE'\n",
+    "min_silence_len = 1000 # must be silent for at least half a second\n",
+    "silence_thresh = 15 # consider it silent if quieter than -16 dBFS    \n",
+    "WordSplitter(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transcript V:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunk_name = 'V'\n",
+    "raw_audio_path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/Zero_padding/V_zero_padding.wav'\n",
+    "chunk_storage_directory = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV'\n",
+    "min_silence_len = 1000 # must be silent for at least half a second\n",
+    "silence_thresh = 15 # consider it silent if quieter than -16 dBFS    \n",
+    "WordSplitter(chunk_name,raw_audio_path,min_silence_len,silence_thresh)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chunk_name = 'N'\n",
+    "raw_audio_path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/Zero_padding/N_zero_padding.wav'\n",
+    "chunk_storage_directory = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN'\n",
+    "min_silence_len = 1000 # must be silent for at least half a second\n",
+    "silence_thresh = 15 # consider it silent if quieter than -16 dBFS    \n",
+    "WordSplitter(chunk_name,raw_audio_path,min_silence_len,silence_thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prueba 2 - Fracción del texto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esta es una prueba con el fragmento: \"Cuando nuestro cerebro se terminó de formar hace unos cien mil años\" que en el caso del archivo \n",
+    "1) _CuandoNuestroCerebro_amano_algoritmo.wav_ --> el recorte es el siguiente: \"Cuandonue\"  \"strocerebro se\" \"terminó de\" \"formar\" \"hace unos\" \"cien mil años \" (6 _chunks_)\n",
+    "2) _CuandoNuestroCerebro_amano_oido.wav_ --> el recorte es el siguiente: \"Cuando nuestro\"  \"cerebro se\" \"terminó de\" \"formar\" \"hace unos\" \"cien mil\"  \"años \" (7 _chunks_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,6 +214,16 @@
     }
    ],
    "source": [
+    "# CuandoNuestroCerebro_amano_oido.wav --> \n",
+    "# el recorte es el siguiente: \n",
+    "# \"Cuando nuestro\"\n",
+    "# \"cerebro se\"\n",
+    "# \"terminó de\"\n",
+    "# \"formar\"\n",
+    "# \"hace unos\"\n",
+    "# \"cien mil\" \n",
+    "# \"años \" (7 _chunks_)\n",
+    "\n",
     "from pydub import AudioSegment\n",
     "from pydub.silence import split_on_silence\n",
     "\n",
@@ -61,7 +232,7 @@
     "    audio_chunks = split_on_silence(\n",
     "        sound_file,\n",
     "        min_silence_len,\n",
-    "        silence_thresh = sound_file.dBFS-15\n",
+    "        silence_thresh = sound_file.dBFS-silence_thresh\n",
     "        )\n",
     "    for i, chunk in enumerate(audio_chunks):\n",
     "        out_file = f\"{chunk_storage_directory}/chunk{i}_de_{chunk_name}.wav\"\n",
@@ -72,23 +243,33 @@
     "raw_audio_path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosOriginales/CuandoNuestroCerebro_amano_oido.wav'\n",
     "chunk_storage_directory = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3'\n",
     "min_silence_len = 500 # must be silent for at least half a second\n",
-    "silence_thresh=0 # consider it silent if quieter than -16 dBFS    \n",
+    "silence_thresh = 15 # consider it silent if quieter than -16 dBFS    \n",
     "WordSplitter(chunk_name,raw_audio_path,min_silence_len,silence_thresh)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "_CuandoNuestroCerebro_amano_algoritmo.wav_ --> el recorte es el siguiente: \"Cuandonue\"  \"strocerebro se\" \"terminó de\" \"formar\" \"hace unos\" \"cien mil años \" (6 _chunks_)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1577414363.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    _CuandoNuestroCerebro_amano_algoritmo.wav_ --> el recorte es el siguiente: \"Cuandonue\"  \"strocerebro se\" \"terminó de\" \"formar\" \"hace unos\" \"cien mil años \" (6 _chunks_)\u001b[0m\n\u001b[1;37m                                                ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
+    "# _CuandoNuestroCerebro_amano_algoritmo.wav_ --> el recorte es el siguiente:\n",
+    "# \"Cuandonue\" \n",
+    "# \"strocerebro se\"\n",
+    "# \"terminó de\"\n",
+    "# \"formar\" \n",
+    "# \"hace unos\" \n",
+    "# \"cien mil años \" (6 _chunks_)\n",
+    "\n",
     "from pydub import AudioSegment\n",
     "from pydub.silence import split_on_silence\n",
     "\n",
@@ -112,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hola_como_estas? bien espaciado"
+    "## Prueba 1 - Hola_como_estas? bien espaciado"
    ]
   },
   {
@@ -154,7 +335,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gate"
+    "# Funciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gate"
    ]
   },
   {
@@ -222,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Zero_padding"
+    "## Zero_padding"
    ]
   },
   {
@@ -260,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# contar cantidad de ceros"
+    "## contar cantidad de ceros"
    ]
   },
   {
@@ -302,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Función "
+    "# Word-splitter "
    ]
   },
   {
