--- a/Prototipos/Prototipo3/Splitter_desarrollo.ipynb
+++ b/Prototipos/Prototipo3/Splitter_desarrollo.ipynb
@@ -72,66 +72,66 @@
    "source": [
     "Transcript V Celular:\n",
     "\n",
-    "0)'Cuando nuestro cerebro '\n",
+    "0)'Cuando nuestro cerebro ' OK\n",
     "\n",
-    "1)'se terminó de '\n",
+    "1)'se terminó de ' OK\n",
     "\n",
-    "2)'formar hace unos cien mil años,'\n",
+    "2)'formar hace unos cien mil años,' OK\n",
     "\n",
-    "3)'viviamos en un mundo '\n",
+    "3)'viviamos en un mundo ' OK\n",
     "\n",
-    "4)'muy'\n",
+    "4)'muy' OK\n",
     "\n",
-    "5)'hos'\n",
+    "5)'hos' OK\n",
     "\n",
-    "6)'til. '\n",
+    "6)'til.' OK\n",
     "\n",
-    "7)'Salíamos a cazar '\n",
+    "7)'Salíamos a cazar ' OK\n",
     "\n",
-    "8)'para '\n",
+    "8)'para' OK\n",
     "\n",
-    "9)'poder subsis'\n",
+    "9)'poder subsis' OK\n",
     "\n",
-    "10)'tir. '\n",
+    "10)'tir. ' OK\n",
     "\n",
-    "11)'Debido a las '\n",
+    "11)'Debido a las ' OK\n",
     "\n",
-    "12)'condiciones ambien'\n",
+    "12)'condiciones ambien' OK\n",
     "\n",
-    "13)'tales y a los de'\n",
+    "13)'tales y a los de' OK\n",
     "\n",
-    "14)'predadores '\n",
+    "14)'predadores ' OK\n",
     "\n",
-    "15)'que deambulaban, '\n",
+    "15)'que deambulaban,' OK\n",
     "\n",
-    "16)'estábamos '\n",
+    "16)'estábamos' OK\n",
     "\n",
-    "17)'en un es'\n",
+    "17)'en un es' OK\n",
     "\n",
-    "18)'tado de alerta bas'\n",
+    "18)'tado de alerta bas' OK\n",
     "\n",
-    "19)'tante permanente:'\n",
+    "19)'tante permanente:' OK\n",
     "\n",
-    "20)'al acecho de una presa,'\n",
+    "20)'al acecho de una presa,' OK\n",
     "\n",
-    "21)'pero también teniendo mucho cuidado de que no '\n",
+    "21)'pero también teniendo mucho cuidado de que no' OK\n",
     "\n",
-    "22)'apareciera'\n",
+    "22)'apareciera' OK\n",
     "\n",
-    "23)'un depredador. '\n",
+    "23)'un depredador.' OK\n",
     "\n",
-    "24)'En ese momen'\n",
+    "24)'En ese momen' OK\n",
     "\n",
-    "25)'to, los más '\n",
+    "25)'to, los más' OK\n",
     "\n",
-    "26)'temibles '\n",
+    "26)'temibles' OK\n",
     "\n",
-    "27)'eran los leopardos.'\n"
+    "27)'eran los leopardos.' OK\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,9 @@
       "Audio22 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksVCelular/chunk22_de_V.wav\n",
       "Audio23 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksVCelular/chunk23_de_V.wav\n",
       "Audio24 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksVCelular/chunk24_de_V.wav\n",
-      "Audio25 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksVCelular/chunk25_de_V.wav\n"
+      "Audio25 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksVCelular/chunk25_de_V.wav\n",
+      "Audio26 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksVCelular/chunk26_de_V.wav\n",
+      "Audio27 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksVCelular/chunk27_de_V.wav\n"
      ]
     }
    ],
@@ -172,7 +174,7 @@
     "raw_audio_path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/Zero_padding/V_celular_zero_padding.wav'\n",
     "chunk_storage_directory = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksVCelular'\n",
     "min_silence_len = 1000 # must be silent for at least half a second\n",
-    "silence_thresh = 10 # consider it silent if quieter than -16 dBFS    \n",
+    "silence_thresh = 15 # consider it silent if quieter than -16 dBFS    \n",
     "WordSplitter(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresh)"
    ]
   },
