--- a/Prototipos/Prototipo3/Prototipo3.ipynb
+++ b/Prototipos/Prototipo3/Prototipo3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,6 @@
     "    return np.mean(x)\n",
     "\n",
     "import pyloudnorm as pyln\n",
-    "import librosa \n",
     "\n",
     "def LoudnessPorPersona(y,sr):\n",
     "    meter = pyln.Meter(sr)\n",
@@ -35,32 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pydub import AudioSegment\n",
-    "from pydub.silence import split_on_silence\n",
-    "\n",
-    "def WordSplitter(chunk_name,path,min_silence_len,silence_thresh,chunk_storage_directory):\n",
-    "    sound_file = AudioSegment.from_wav(path)\n",
-    "    audio_chunks = split_on_silence(sound_file,min_silence_len,silence_thresh)\n",
-    "    for i, chunk in enumerate(audio_chunks):\n",
-    "        out_file = f\"{chunk_storage_directory}/chunk{i}_de_{chunk_name}.wav\"\n",
-    "        print(\"exporting\", out_file)\n",
-    "        chunk.export(out_file, format=\"wav\")\n",
-    "\n",
-    "chunk_name = 'HolaComoEstasPitched2'\n",
-    "path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo2/Audios/HolaComoEstasPitched51.wav'\n",
-    "chunk_storage_directory = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3'\n",
-    "min_silence_len = 11 # must be silent for at least half a second\n",
-    "silence_thresh=-25 # consider it silent if quieter than -16 dBFS    \n",
-    "WordSplitter(chunk_name,path,min_silence_len,silence_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +54,128 @@
     "                variable_tipo = 'Pitched'\n",
     "            df = df.append({'Pitch':p, 'Loudness':l,'Tipo':variable_tipo},ignore_index=True)\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydub import AudioSegment\n",
+    "from pydub.silence import split_on_silence\n",
+    "\n",
+    "def WordSplitter(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresh):\n",
+    "    sound_file = AudioSegment.from_wav(raw_audio_path)\n",
+    "    audio_chunks = split_on_silence(\n",
+    "        sound_file,\n",
+    "        min_silence_len,\n",
+    "        silence_thresh = sound_file.dBFS-silence_thresh\n",
+    "        )\n",
+    "    for i, chunk in enumerate(audio_chunks):\n",
+    "        out_file = f\"{chunk_storage_directory}/chunk{i}_de_{chunk_name}.wav\"\n",
+    "        print(f'Audio{i}', out_file)\n",
+    "        chunk.export(out_file, format=\"wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Audio0 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk0_de_E.wav\n",
+      "Audio1 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk1_de_E.wav\n",
+      "Audio2 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk2_de_E.wav\n",
+      "Audio3 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk3_de_E.wav\n",
+      "Audio4 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk4_de_E.wav\n",
+      "Audio5 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk5_de_E.wav\n",
+      "Audio6 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk6_de_E.wav\n",
+      "Audio7 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk7_de_E.wav\n",
+      "Audio8 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk8_de_E.wav\n",
+      "Audio9 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk9_de_E.wav\n",
+      "Audio10 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk10_de_E.wav\n",
+      "Audio11 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk11_de_E.wav\n",
+      "Audio12 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk12_de_E.wav\n",
+      "Audio13 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk13_de_E.wav\n",
+      "Audio14 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk14_de_E.wav\n",
+      "Audio15 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk15_de_E.wav\n",
+      "Audio16 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk16_de_E.wav\n",
+      "Audio17 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk17_de_E.wav\n",
+      "Audio18 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk18_de_E.wav\n",
+      "Audio19 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk19_de_E.wav\n",
+      "Audio20 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk20_de_E.wav\n",
+      "Audio21 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk21_de_E.wav\n",
+      "Audio22 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk22_de_E.wav\n",
+      "Audio23 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksE/chunk23_de_E.wav\n",
+      "Audio0 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk0_de_V.wav\n",
+      "Audio1 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk1_de_V.wav\n",
+      "Audio2 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk2_de_V.wav\n",
+      "Audio3 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk3_de_V.wav\n",
+      "Audio4 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk4_de_V.wav\n",
+      "Audio5 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk5_de_V.wav\n",
+      "Audio6 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk6_de_V.wav\n",
+      "Audio7 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk7_de_V.wav\n",
+      "Audio8 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk8_de_V.wav\n",
+      "Audio9 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk9_de_V.wav\n",
+      "Audio10 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk10_de_V.wav\n",
+      "Audio11 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk11_de_V.wav\n",
+      "Audio12 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk12_de_V.wav\n",
+      "Audio13 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk13_de_V.wav\n",
+      "Audio14 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk14_de_V.wav\n",
+      "Audio15 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk15_de_V.wav\n",
+      "Audio16 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk16_de_V.wav\n",
+      "Audio17 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk17_de_V.wav\n",
+      "Audio18 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk18_de_V.wav\n",
+      "Audio19 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksV/chunk19_de_V.wav\n",
+      "Audio0 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk0_de_N.wav\n",
+      "Audio1 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk1_de_N.wav\n",
+      "Audio2 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk2_de_N.wav\n",
+      "Audio3 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk3_de_N.wav\n",
+      "Audio4 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk4_de_N.wav\n",
+      "Audio5 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk5_de_N.wav\n",
+      "Audio6 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk6_de_N.wav\n",
+      "Audio7 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk7_de_N.wav\n",
+      "Audio8 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk8_de_N.wav\n",
+      "Audio9 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk9_de_N.wav\n",
+      "Audio10 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk10_de_N.wav\n",
+      "Audio11 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk11_de_N.wav\n",
+      "Audio12 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk12_de_N.wav\n",
+      "Audio13 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk13_de_N.wav\n",
+      "Audio14 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk14_de_N.wav\n",
+      "Audio15 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk15_de_N.wav\n",
+      "Audio16 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk16_de_N.wav\n",
+      "Audio17 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk17_de_N.wav\n",
+      "Audio18 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk18_de_N.wav\n",
+      "Audio19 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk19_de_N.wav\n",
+      "Audio20 C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/ChunksN/chunk20_de_N.wav\n"
+     ]
+    }
+   ],
+   "source": [
+    "chunk_names = ['E','V','N']\n",
+    "\n",
+    "raw_audio_main_path = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual/Zero_padding'\n",
+    "raw_audio_main_path_name = ['E_zero_padding','V_zero_padding','N_zero_padding']\n",
+    "\n",
+    "chunk_storage_main_directory = 'C:/Users/Asus/OneDrive/Escritorio/MapaDeVoces/Prototipos/Prototipo3/AudiosPrototipo3/AudiosWordSplitterManual'\n",
+    "chunk_storage_main_directory_names = ['ChunksE','ChunksV','ChunksN']\n",
+    "\n",
+    "min_silence_len = 1000 \n",
+    "\n",
+    "silence_thresholds = [10,15,15]\n",
+    "\n",
+    "def RecortarTodasLasPalabras(chunk_names,raw_audio_main_path,raw_audio_main_path_name,chunk_storage_main_directory,chunk_storage_main_directory_names,min_silence_len,silence_thresholds): \n",
+    "    for i in range(len(chunk_names)):\n",
+    "        chunk_name = chunk_names[i]\n",
+    "        raw_audio_path = f'{raw_audio_main_path}/{raw_audio_main_path_name[i]}.wav'\n",
+    "        chunk_storage_directory = f'{chunk_storage_main_directory}/{chunk_storage_main_directory_names[i]}'\n",
+    "        WordSplitter(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresholds[i]) \n",
+    "\n",
+    "RecortarTodasLasPalabras(chunk_names,raw_audio_main_path,raw_audio_main_path_name,chunk_storage_main_directory,chunk_storage_main_directory_names,min_silence_len,silence_thresholds)"
    ]
   },
   {
