--- a/Prototipos/Prototipo3/Prototipo3.ipynb
+++ b/Prototipos/Prototipo3/Prototipo3.ipynb
@@ -168,7 +168,14 @@
     "\n",
     "silence_thresholds = [10,15,15]\n",
     "\n",
-    "def RecortarTodasLasPalabras(chunk_names,raw_audio_main_path,raw_audio_main_path_name,chunk_storage_main_directory,chunk_storage_main_directory_names,min_silence_len,silence_thresholds): \n",
+    "def RecortarTodasLasPalabras(\n",
+    "        chunk_names,\n",
+    "        raw_audio_main_path,\n",
+    "        raw_audio_main_path_name,\n",
+    "        chunk_storage_main_directory,\n",
+    "        chunk_storage_main_directory_names,\n",
+    "        min_silence_len,silence_thresholds\n",
+    "        ): \n",
     "    for i in range(len(chunk_names)):\n",
     "        chunk_name = chunk_names[i]\n",
     "        raw_audio_path = f'{raw_audio_main_path}/{raw_audio_main_path_name[i]}.wav'\n",
