--- a/Prototipos/Prototipo3/Prototipo3.ipynb
+++ b/Prototipos/Prototipo3/Prototipo3.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prototipo 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funciones"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculadora de pitch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -9,7 +30,7 @@
     "import librosa\n",
     "import math\n",
     "\n",
-    "def PitchPorPersona(y,sr):\n",
+    "def Pitch(y,sr):\n",
     "    f0, voiced_flag, voiced_probs=librosa.pyin(\n",
     "        y,\n",
     "        fmin=librosa.note_to_hz('C2'),\n",
@@ -17,43 +38,85 @@
     "        sr=sr)\n",
     "    f0 = [x for x in f0 if not isinstance(x, float) or not math.isnan(x)]\n",
     "    f0 = [i for i in f0 if i != 0]\n",
-    "    return f0\n",
-    "\n",
+    "    return f0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Promediador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "\n",
     "def Promediador(x):\n",
-    "    return np.mean(x)\n",
-    "\n",
+    "    return np.mean(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculadora de Loudness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pyloudnorm as pyln\n",
     "\n",
-    "def LoudnessPorPersona(y,sr):\n",
+    "def Loudness(y,sr):\n",
     "    meter = pyln.Meter(sr)\n",
     "    loudness = meter.integrated_loudness(y)\n",
     "    return loudness"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Función cargar los parámetros acústicos a un df"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "def CalculadoraParametrosAcusticos(path_carpeta, nombre, cant_audios, extension, cant_basesdedatos):\n",
+    "def CalcularYCargarParametrosAcusticosAldf(path_carpeta, nombre, cant_audios, extension, cant_basesdedatos):\n",
     "    df = pd.DataFrame(columns=['Pitch', 'Loudness','Tipo'])\n",
     "    for j in range(cant_basesdedatos):\n",
     "        for i in range(cant_audios):\n",
     "            path = f'{path_carpeta}/{nombre[j]}{i}.{extension[j]}'    \n",
     "            y,sr = librosa.load(path)\n",
-    "            p=Promediador(PitchPorPersona(y,sr))\n",
-    "            l=Promediador(LoudnessPorPersona(y,sr))\n",
+    "            p=Promediador(Pitch(y,sr))\n",
+    "            l=Promediador(Loudness(y,sr))\n",
     "            if j==0:\n",
     "                variable_tipo = 'Normal' \n",
     "            elif j==1:\n",
     "                variable_tipo = 'Pitched'\n",
     "            df = df.append({'Pitch':p, 'Loudness':l,'Tipo':variable_tipo},ignore_index=True)\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AudioChunker"
    ]
   },
   {
@@ -65,7 +128,7 @@
     "from pydub import AudioSegment\n",
     "from pydub.silence import split_on_silence\n",
     "\n",
-    "def WordSplitter(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresh):\n",
+    "def AudioChunker(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresh):\n",
     "    sound_file = AudioSegment.from_wav(raw_audio_path)\n",
     "    audio_chunks = split_on_silence(\n",
     "        sound_file,\n",
@@ -76,6 +139,35 @@
     "        out_file = f\"{chunk_storage_directory}/chunk{i}_de_{chunk_name}.wav\"\n",
     "        print(f'Audio{i}', out_file)\n",
     "        chunk.export(out_file, format=\"wav\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recortar todas las palabras"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def RecortarTodasLasPalabras(\n",
+    "        chunk_names,\n",
+    "        raw_audio_main_path,\n",
+    "        raw_audio_main_path_name,\n",
+    "        chunk_storage_main_directory,\n",
+    "        chunk_storage_main_directory_names,\n",
+    "        min_silence_len,silence_thresholds\n",
+    "        ): \n",
+    "    \n",
+    "    for i in range(len(chunk_names)):\n",
+    "        chunk_name = chunk_names[i]\n",
+    "        raw_audio_path = f'{raw_audio_main_path}/{raw_audio_main_path_name[i]}.wav'\n",
+    "        chunk_storage_directory = f'{chunk_storage_main_directory}/{chunk_storage_main_directory_names[i]}'\n",
+    "        AudioChunker(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresholds[i]) "
    ]
   },
   {
@@ -167,21 +259,6 @@
     "min_silence_len = 1000 \n",
     "\n",
     "silence_thresholds = [10,15,15]\n",
-    "\n",
-    "def RecortarTodasLasPalabras(\n",
-    "        chunk_names,\n",
-    "        raw_audio_main_path,\n",
-    "        raw_audio_main_path_name,\n",
-    "        chunk_storage_main_directory,\n",
-    "        chunk_storage_main_directory_names,\n",
-    "        min_silence_len,silence_thresholds\n",
-    "        ): \n",
-    "    for i in range(len(chunk_names)):\n",
-    "        chunk_name = chunk_names[i]\n",
-    "        raw_audio_path = f'{raw_audio_main_path}/{raw_audio_main_path_name[i]}.wav'\n",
-    "        chunk_storage_directory = f'{chunk_storage_main_directory}/{chunk_storage_main_directory_names[i]}'\n",
-    "        WordSplitter(chunk_name,raw_audio_path,chunk_storage_directory,min_silence_len,silence_thresholds[i]) \n",
-    "\n",
     "RecortarTodasLasPalabras(chunk_names,raw_audio_main_path,raw_audio_main_path_name,chunk_storage_main_directory,chunk_storage_main_directory_names,min_silence_len,silence_thresholds)"
    ]
   },
@@ -197,7 +274,14 @@
     "cant_audios = 56\n",
     "cant_basesdedatos = 2\n",
     "\n",
-    "BaseDeDatos=CalculadoraParametrosAcusticos(path_carpeta,nombre,cant_audios,extension,cant_basesdedatos)"
+    "BaseDeDatos=CalcularYCargarParametrosAcusticosAldf(path_carpeta,nombre,cant_audios,extension,cant_basesdedatos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Clustering"
    ]
   },
   {
@@ -217,6 +301,13 @@
     "scaled_pitch = StandardScaler().fit_transform(pitch) # estandariza los valores\n",
     "\n",
     "embedding = reducer.fit_transform(pitch) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ploteo"
    ]
   },
   {
